<resources>
    <string name="app_name">Media Vault</string>
    <string name="action_settings">Settings</string>
    <string name="storage_permission_message">The app was not allowed to read or write to your storage. Hence, it cannot function properly. Please consider granting it this permission</string>
    <string name="splash_screen">Splash screen</string>
    <string name="action_delete">Delete</string>
    <string name="action_archive">Archive</string>
    <string name="action_download">Download</string>
    <string name="action_rename">Rename</string>
    <string name="action_copy">Copy</string>
    <string name="action_move">Move</string>
    <string name="action_sort">Sort</string>
    <string name="ok_button_label">Ok</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="delete_file_message">%s files deleted</string>
    <string name="copy_file_message"> file(s) copied successfully</string>
    <string name="move_file_message"> file(s) moved successfully</string>
    <string name="rename_dialog_title">Rename</string>
    <string name="rename_dialog_ok_button">Rename</string>
    <string name="rename_dialog_cancel_button">Cancel</string>
    <string name="empty_dialog_message">Please enter a file name</string>
    <string name="file_already_exists_error">File already exists.</string>
    <string name="sort_alert_dialog_title">Sort by</string>
    <string name="dialog_same_destination_error">Source and destination cannot be same.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="create_new_dir">+</string>
    <string name="no_item_found">No item found in folder</string>
    <string name="task_running_status">Task is already running</string>
    <string name="create_directory">Create Directory</string>
    <string name="create">Create</string>
    <string name="error_toast_for_directory">Please enter a directory name.</string>
    <string name="rename_directory_name_length">Directory name must not be longer than 20 characters.</string>
    <string name="directory_name_invalid_character">Directory name cannot contain invalid characters.</string>
    <string name="directory_hint">Please enter a directory name.</string>
    <string name="directory_title">Create Directory</string>
    <string name="wallet">Primary Wallet</string>
    <string name="character2">g</string>
    <string name="delete">l</string>
    <string name="n">n</string>
    <string name="select_wallet">Select Wallet</string>
    <!-- sorting dialog array list items -->
    <string-array name="sorting_list">
        <item>Date</item>
        <item>Size (Descending)</item>
        <item>Size (Ascending)</item>

    </string-array>

    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>

    <string name="pick_image_intent_chooser_title">Select source</string>

    <string name="main_action_crop">Save</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="main_action_flip">Flip</string>
    <string name="main_action_flip_horizontally">Flip horizontally</string>
    <string name="main_action_flip_vertically">Flip vertically</string>
    <string name="drawer_option_title">Crop View Presets</string>
    <string name="action_edit">Crop</string>
    <string name="crop_failed">"Image crop failed: "</string>
    <string name="file_already_exists">File already exist,OverWrite?</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_success_message">file deleted successfully</string>
    <string name="image_load_failed">"Image load failed: "</string>
    <string name="already_exists_file_in_copy">Some file(s) may not be copied</string>
    <string name="some_file_not_moved">Some file(s) may not be moved</string>
    <string name="some_file_not_copy_viewpager">File not copied,Same file name already exist.</string>
    <string name="some_file_not_move_viewpager">File not moved,Same file name already exist.</string>
    <string name="info">Info</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure_you_want_to_delete_file_s">Are you sure you want to delete file(s)?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="last_modified">Last modified</string>
    <string name="tab_all">All</string>
    <string name="tab_secure">Secure</string>
    <string name="no_folder_select_alert">Please select atleast one folder.</string>
    <string name="select">Select</string>
    <string name="album_view">Album View</string>
    <string name="list_view">List View</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="details">Details</string>
    <string name="Info">Info</string>
    <string name="overwrite_file">Overwrite file ?</string>
    <string name="move_to_secure_media_vault">Move to secure media vault</string>
    <string name="rename_file_name_length">File name must not be longer than 40 characters.</string>
    <string name="file_name_invalid_character">File name cannot contain invalid characters.</string>
    <string name="select_wallet_to_upload_secure_file">Select wallet to upload secure file(s).</string>
    <string name="upload_file">Upload</string>
    <string name="wallet_">Wallet</string>
    <string name="file_size">File(s) Size</string>
    <string name="file_uploading_charge">File Upload Charge</string>
    <string name="dummy_fee">0.0 BTC</string>
    <string name="information">Information</string>
    <string name="directory_created">Directory created</string>
    <string name="internet_connection">Please check your internet connection.</string>
    <string name="zero_kb">0.00 KB</string>
    <string name="secure_file_sending">Uploading Secure File(s)</string>
    <string name="sending">Uploading</string>
    <string name="secure_file_failed">Error : File Uploading Failed</string>
    <string name="confirmation_msg">Do you want to cancel the upload ?</string>
    <string name="bitcoinText"> deducted from your</string>
    <string name="transactionText">Transaction ID:</string>
    <string name="file_sent">File(s) uploaded successfully</string>
    <string name="randomText">addsd344hfhsfdsfnj34n5jk45jr4j4j4r4k4nvef4jfejkdsfkjsdnfjeufodfdfddfnvfjvjvvv</string>
    <string name="webserver_key_value"></string>
    <string name="error_msg_failed">Uploading file(s) Failed.Please try again</string>
    <string name="file_uploaded">File uploaded successfully</string>
    <string name="record_added">Record successfully added.</string>
    <string name="play_store_success_msg">Record save successfully on app store.</string>
    <string name="message_fee_cannot_be_zero">Please wait we are calculating file uploading fees</string>
    <string name="insufficient_balance">Insufficient balance</string>
    <string name="selected_file_count">Please select five file(s) at a time only.</string>
    <string name="selected_file_size">Selected media file(s) should not be greater than 25 mb.</string>
    <string name="file_downloading_in_progress">File(s) downloading in progress.</string>
    <string name="file_delete_in_progress">File deleting in progress.</string>
    <string name="move_here">Move here..</string>
    <string name="copy_here">Copy here..</string>
    <string name="dialog_fragment">Dialog Fragment</string>
    <string name="photo_details">Photo details</string>
    <string name="editor">Editor</string>
    <string name="record_saving_on_play_store">Please wait while record is saving on app store.</string>
    <string name="some_file_uploading_error">Some file(s) may not be uploaded,Please try again</string>
    <string name="error_in_renaming_file">Error in renaming the file,please try again.</string>
    <string name="select_same_file_type">Please select same file(s) type only.</string>
    <string name="error_in_receiving_file">Error in receiving some file(s).Please try again</string>
    <string name="error_in_deleting_file">Error in deleting some file(s).Please try again</string>
    <string name="archive_file_alert_message">Are you sure you want to archive file(s)?</string>
    <string name="please_wait">Please wait while some network operation perform.</string>
    <string name="selected_string">%s selected</string>
    <string name="btc">" BTC"</string>
    <string name="eot">" EOT"</string>
    <string name="restore_file_s">Restore file (s)</string>
    <string name="confirm_archive">Confirm Archive</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="are_you_sure_want_to_cancel_download">Are you sure you want to cancel download file(s)?</string>
    <string name="you_want_to_pay_with">You want to pay with ?</string>
    <string name="select_wallet_type">Select Wallet Type</string>
    <string name="eot_wallet_name">EOT</string>
    <string name="bit_coin_wallet_name">Bitcoin</string>
    <string name="EotBalNotUpdated">EOT balance not updated.</string>
    <string name="wallet_eot">EOT</string>
    <string name="wallet_bit_coin">BIT_COIN</string>
    <string name="wallet_bitcoin">Bitcoin</string>
    <string name="eot_wallet_msg">" EOT Wallet"</string>
    <string name="done">Done</string>
    <string name="please_select_a_file">Please select at least one file.</string>
    <string name="image">image</string>
</resources>
