<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_archive"
        android:title="@string/action_archive"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:title="@string/action_download"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:title="@string/info"
        app:showAsAction="never" />

</menu>