<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_action_rotate"
        android:icon="@drawable/ic_rotate_white_24dp"
        android:title="@string/main_action_rotate"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/main_action_flip"
        android:icon="@drawable/ic_flip_white_24dp"
        android:title="@string/main_action_flip"
        android:visible="true"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/main_action_flip_horizontally"
                android:title="@string/main_action_flip_horizontally"/>
            <item
                android:id="@+id/main_action_flip_vertically"
                android:title="@string/main_action_flip_vertically"/>
        </menu>
    </item>

    <item
        android:id="@+id/main_action_crop"
        android:title="@string/main_action_crop"
        app:showAsAction="always"/>

</menu>
