<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/black">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_folder_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/button_bg_color"
        android:orientation="horizontal"
        android:padding="@dimen/dialog_bottom_padding"
        android:weightSum="3">

        <TextView
            android:id="@+id/create_new_directory"
            style="@style/font_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.50"
            android:background="@drawable/ripple_bottom"
            android:gravity="center"
            android:text="@string/create_new_dir" />

        <TextView
            android:id="@+id/cancel"
            style="@style/font_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".75"
            android:background="@drawable/ripple_bottom"
            android:gravity="center"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/ok"
            style="@style/font_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".75"
            android:background="@drawable/ripple_bottom"
            android:gravity="center"
            android:text="@string/ok" />
    </LinearLayout>
</RelativeLayout>
